--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+.open-sans{
+  font-family: "Open Sans", sans-serif;
+}
+
 .banner1 {
   text-align: left;
   font: normal normal Open Sans;
@@ -13,5 +19,5 @@
 .banner2 {
   font: normal normal bold Avant Garde Gothic Pro;
   letter-spacing: 0px;
-  color: #19293A;
+  color: #19293A;
 }
